--- a/index.html
+++ b/index.html
@@ -3,34 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
   <title>Document</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
   
- <section class="container ">
-  <div class="row  ">
+ <section class="container">
+  <div class="row">
 
-    <div class="col-md-12 col-sm-12">
-      <div class="image">
+    <div class="col-md-12 col-sm-12 ">
+        <p class= "text-light text-center">My First Successful Javascript code</p>
+      </div>
+      
+      <div class="image col-md-12 col-sm-12">
       <img src="images/pic_bulboff.gif" class="mr-30" id="img" alt="">
     </div>
-  </div>
 
-      <div class="col-md-6 col-sm-6">
-        <div class="switch1">
-        <input type="button" onclick="on()" value="switch on" class="form-control bg-success text-light">
-      </div>
-      </div>
+    </div>
+</section>
+<section class="container">
+  <div class="row">
+    <div class="col-md-6 col-sm-12">
+      <div class="switch1">
+      <input type="button" onclick="on()" value="switch on" class="form-control bg-warning text-light"> 
+    </div> 
+    </div>
+      
 
-      <div class="col-md-6 col-sm-6">
+      <div class="col-md-6 col-sm-12">
         <div class="switch2">
-        <input type="button" onclick="off()" value="switch off" class="form-control bg-danger text-light"> 
+        <input type="button" onclick="off()" value="switch off" class="form-control bg-light text-dark"> 
       </div> 
       </div>
-    </div>
+
+   </div>
 </section>
 <script>
   
